# ch5_Advanced_CPP_Programming

./: .gitignore  README.md
lesson-01/: task.md
lesson-01/Compilation_and_Linking/: Compilation_and_Linking.sln
lesson-01/Compilation_and_Linking/Compilation_and_Linking/: Compilation_and_Linking.vcxproj  Main.cpp
lesson-02/: tasks.md
lesson-02/1_Smart_Array/: main.cpp
lesson-02/1_Smart_Array/Smart_Array_lib/: CMakeLists.txt
lesson-02/1_Smart_Array/Smart_Array_lib/include/: Smart_Array.h
lesson-02/1_Smart_Array/Smart_Array_lib/src/: Smart_Array.cpp
lesson-02/2_Coping_Smart_Array/: CMakeLists.txt  main.cpp
lesson-02/2_Coping_Smart_Array/Smart_Array_lib/: CMakeLists.txt
lesson-02/2_Coping_Smart_Array/Smart_Array_lib/include/: Smart_Array.h
lesson-02/2_Coping_Smart_Array/Smart_Array_lib/src/: Smart_Array.cpp
lesson-03/: tasks.md
lesson-03/1_Testing_Basic_Functions_Of_Doubly_Linked_List/: CMakeLists.txt  main.cpp
lesson-03/2_Testing_Functions_For_Adding_And_Retrieving_Elements_From_Doubly_Linked_List/: CMakeLists.txt  main.cpp
lesson-04/: tasks.md
lesson-04/1_Squaring/: CMakeLists.txt  main.cpp
lesson-04/2_Table/: CMakeLists.txt  main.cpp
lesson-04/2_Table/Table/: Table.cpp  Table.h
lesson-04/3_Number_Counter/: CMakeLists.txt  main.cpp
lesson-05/: tasks.md
lesson-05/1_Symbols_Frequency/: CMakeLists.txt  main.cpp
lesson-05/2_Removing_Duplicates/: CMakeLists.txt  main.cpp
lesson-05/3_Analogue_std_vector/: CMakeLists.txt  main.cpp
lesson-05/3_Analogue_std_vector/My_Vector/: My_Vector.h
lesson-06/: tasks.md
lesson-06/1_Unique_Vector/: CMakeLists.txt  main.cpp
lesson-06/1_Unique_Vector/Remove Duplicates/: Remove_Duplicate_set.cpp  Remove_Duplicate_set.h  Remove_Duplicate_sort.cpp  Remove_Duplicate_sort.h
lesson-06/2_Container_Printing/: CMakeLists.txt  main.cpp
